# damnflags

./: .gitignore  CMakeLists.txt  LICENSE  conanfile.py
conf/: config.json  example_ycm_extra_conf.py
include/: compilation_database.h  config.h  filesys.h  logger.h  project_structure.h  utils.h  workspace.h
src/: compilation_database.cpp  config.cpp  logger.cpp  main.cpp  project_structure.cpp  utils.cpp  workspace.cpp
